# cuda-raytracing

./: README.md  evaluate.py  run.sh
profiling/: opt0.nsight-cuprof-report  opt1.nsight-cuprof-report  opt2.nsight-cuprof-report  opt3.nsight-cuprof-report
smallpt/: CMakeLists.txt  Makefile  input.txt  main.cu  rai_build.yml  smallpt.cpp  smallpt.cu
